--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "ios": "ENVFILE=.env.prod react-native run-ios --scheme AwesomeApp",
     "start": "ENVFILE=.env.prod react-native start --reset-cache",
     "clean:android": "cd android && ./gradlew clean && ./gradlew cleanBuildCache",
-    "clean:cache": "watchman watch-del-all && rm -rf node_modules/ && rm -rf $TMPDIR/react-native-packager-cache-* && rm -rf $TMPDIR/metro-bundler-cache-* && yarn cache clean && yarn install && cd android && ./gradlew clean && ./gradlew cleanBuildCache && cd ../ios && pod install && cd ..",
+    "clean:cache": "rm -rf node_modules/ && yarn cache clean && yarn install && cd android && ./gradlew clean && ./gradlew cleanBuildCache && cd ../ios && pod install && cd ..",
     "ios:install": "cd ios && pod install && cd ..",
     "android:build:dev": "cd android && ./gradlew clean bundleDevRelease && cd ..",
     "android:build:uat": "cd android && ./gradlew clean bundleUatRelease && cd ..",
