--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "lint": "eslint --ext .jsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
     "i18next": "^23.11.4",
     "lodash": "^4.17.21",
@@ -29,11 +31,18 @@
     "react": "18.2.0",
     "react-i18next": "^14.1.1",
     "react-native": "0.74.1",
+    "react-native-biometrics": "^3.0.1",
     "react-native-config": "^1.5.1",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-portalize": "^1.0.7",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-ssl-pinning": "^1.5.7",
     "react-native-sync-preference": "^1.0.0",
     "react-redux": "^9.1.2",
-    "react-thunk": "^1.0.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
