--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "react-native": "0.74.1",
     "react-native-biometrics": "^3.0.1",
     "react-native-config": "^1.5.1",
+    "react-native-crypto-js": "^1.0.0",
+    "react-native-custom-tabs": "^0.1.7",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-portalize": "^1.0.7",
+    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-ssl-pinning": "^1.5.7",
