--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "eslint . --ext .jsx"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
@@ -45,6 +46,7 @@
     "react-native-sync-preference": "^1.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.11"
   },
@@ -65,6 +67,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.1.7",
     "typescript": "5.0.4"
   },
   "engines": {
