--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,7 +83,7 @@ android {
 
     namespace "com.awesomeapp"
     defaultConfig {
-        applicationId "com.awesomeapp"
+        applicationId "com"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -97,6 +97,40 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+                v1SigningEnabled true
+                v2SigningEnabled true
+            }
+        }
+    }
+    flavorDimensions "default"
+    productFlavors {
+        dev {
+            dimension "default"
+            applicationIdSuffix ".awesome.member.dev"
+            resValue "string", "app_name", "AwesomeAppDEV"
+            versionCode 1
+            versionName "0.0.1"
+        }
+        uat {
+            dimension "default"
+            applicationIdSuffix ".awesome.member.uat"
+            resValue "string", "app_name", "AwesomeAppUAT"
+            versionCode 1
+            versionName "0.0.1"
+        }
+        prod {
+            dimension "default"
+            applicationIdSuffix ".awesome.member"
+            resValue "string", "app_name", "AwesomeApp"
+            versionCode 1
+            versionName "0.0.1"
+        }
     }
     buildTypes {
         debug {
@@ -105,7 +139,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
@@ -121,8 +155,6 @@ dependencies {
     } else {
         implementation jscFlavor
     }
-
-    compile "com.android.support:appcompat-v7:25.0.1"
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
