--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -39,3 +39,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=app_dev.jks
+MYAPP_RELEASE_KEY_ALIAS=app_dev
+MYAPP_RELEASE_STORE_PASSWORD=<KEYSTORE_PASSWORD>
+MYAPP_RELEASE_KEY_PASSWORD=<KEYSTORE_PASSWORD>
