--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android:dev": "ENVFILE=.env.dev react-native run-android --appId com.awesome.member.dev --variant=devDebug",
+    "android:dev": "ENVFILE=.env.dev react-native run-android --appId com.awesome.member.dev --mode=devDebug",
     "ios:dev": "ENVFILE=.env.dev react-native run-ios --scheme AwesomeAppDev",
     "start:dev": "react-native start  --reset-cache",
-    "android:uat": "ENVFILE=.env.uat react-native run-android --appId com.awesome.member.uat --variant=uatRelease",
+    "android:uat": "ENVFILE=.env.uat react-native run-android --appId com.awesome.member.uat --mode=uatRelease",
     "ios:uat": "ENVFILE=.env.uat react-native run-ios --scheme AwesomeAppUat",
     "start:uat": "ENVFILE=.env.uat react-native start --reset-cache",
-    "android": "ENVFILE=.env.prod react-native run-android --appId com.awesome.member --variant=prodRelease",
+    "android": "ENVFILE=.env.prod react-native run-android --appId com.awesome.member --mode=prodRelease",
     "ios": "ENVFILE=.env.prod react-native run-ios --scheme AwesomeApp",
     "start": "ENVFILE=.env.prod react-native start --reset-cache",
     "clean:android": "cd android && ./gradlew clean && ./gradlew cleanBuildCache",
@@ -35,15 +35,12 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-config": "^1.5.1",
     "react-native-crypto-js": "^1.0.0",
-    "react-native-custom-tabs": "^0.1.7",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-portalize": "^1.0.7",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
-    "react-native-ssl-pinning": "^1.5.7",
-    "react-native-sync-preference": "^1.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
