--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-portalize": "^1.0.7",
+    "react-native-preference": "^2.2.3",
     "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
