--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android:dev": "ENVFILE=.env.dev react-native run-android --appId com.awesome.member.dev --mode=devDebug",
+    "android:dev": "ENVFILE=.env.dev react-native run-android --appId com.wfx.pet.health.dev --mode=devDebug",
     "ios:dev": "ENVFILE=.env.dev react-native run-ios --scheme AwesomeAppDev",
     "start:dev": "react-native start  --reset-cache",
-    "android:uat": "ENVFILE=.env.uat react-native run-android --appId com.awesome.member.uat --mode=uatRelease",
+    "android:uat": "ENVFILE=.env.uat react-native run-android --appId com.wfx.pet.health.uat --mode=uatRelease",
     "ios:uat": "ENVFILE=.env.uat react-native run-ios --scheme AwesomeAppUat",
     "start:uat": "ENVFILE=.env.uat react-native start --reset-cache",
-    "android": "ENVFILE=.env.prod react-native run-android --appId com.awesome.member --mode=prodRelease",
+    "android": "ENVFILE=.env.prod react-native run-android --appId com.wfx.pet.health --mode=prodRelease",
     "ios": "ENVFILE=.env.prod react-native run-ios --scheme AwesomeApp",
     "start": "ENVFILE=.env.prod react-native start --reset-cache",
     "clean:android": "cd android && ./gradlew clean && ./gradlew cleanBuildCache",
