--- a/package.json
+++ b/package.json
@@ -57,8 +57,12 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.6",
+    "@types/react-native": "^0.73.0",
+    "@types/react-redux": "^7.1.33",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.34",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "eslint-plugin-react-native": "^4.1.0",
