--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.6",
     "@types/react-native": "^0.73.0",
-    "@types/react-redux": "^7.1.33",
+    "@types/react-native-crypto-js": "^1.0.3",
+    "@types/react-native-safari-view": "^2.0.9",
+    "@types/react-redux": "^6.0.28",
     "@types/react-test-renderer": "^18.0.0",
     "@types/styled-components": "^5.1.34",
     "babel-jest": "^29.6.3",
